# Swagger/InternalAPI.json
@@ -2787,17 +2787,6 @@
         }
       }
     },
-    "InternalUserRole": {
-      "type": "object",
-      "properties": {
-        "internalUserRoleId": {
-          "type": "string"
-        },
-        "role": {
-          "type": "string"
-        }
-      }
-    },
     "InternalUser": {
       "type": "object",
       "properties": {
@@ -2807,12 +2796,15 @@
         "userName": {
           "type": "string"
         },
+        "role": {
+          "type": "string"
+        },
         "internalUserRoles": {
-          "type": "array", 
-	  "items": {
-	  	"type":"object",
-		"$ref":"#/definitions/InternalUserRole"
-	  }
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/InternalUserRole"
+          }
         },
         "fundingOpportunityInternalUsers": {
           "type": "array",
@@ -2828,6 +2820,17 @@
             "$ref": "#/definitions/FundingProgramInternalUser"
           }
         }
+      }
+    },
+    "InternalUserRole": {
+      "type": "object",
+      "properties": {
+        "internalUserRoleId": {
+          "type": "string"
+        },        
+        "role": {
+          "type": "string"
+        }        
       }
     },
     "FundingOpportunityInternalUser": {
